Tidied up logging and NDA menu descriptions